Arrow functions do not infer name from computed property but normal functions do https://bugs.webkit.org/show_bug.cgi?id=162720

Reviewed by Saam Barati.

JSTests:

* stress/inferred-names.js:

Source/JavaScriptCore:

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitSetFunctionNameIfNeeded):
Set function name on arrow functions as well.

Canonical link: https://commits.webkit.org/180692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206610 268f45cc-cd09-0410-ab3c-d52691b4dbfc